# chatbot-backend

./: .env.example  .gitignore  README.md  STRUCTURE.md  check_api.py  debug_startup.py  pyproject.toml  test_imports.py
alembic/: env.py
alembic/versions/: 2026_01_30_1610-e5ab831aeb13_initial_migration.py
app/: main.py
app/agents/: chat_agent.py  prompts.py
app/core/: config.py  database.py  exceptions.py  llm.py  models.py  schemas.py
app/rag/: __init__.py  agent.py  embeddings.py  prompts.py
app/services/: __init__.py  chat.py  lead.py  scraper.py
app/tools/: faq_tool.py  intent_tool.py  scraper_tool.py  search_tool.py
