[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg==0.31.0",
    "email-validator>=2.1.0",
    "fastapi==0.128.0",
    "firecrawl==4.13.4",
    "langchain==1.2.7",
    "langchain-community==0.4.1",
    "langchain-core==1.2.7",
    "langchain-huggingface==1.2.0",
    "langchain-tavily>=0.2.17",
    "langgraph==1.0.7",
    "langgraph-checkpoint-postgres==3.0.3",
    "psycopg2-binary==2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic==2.12.4",
    "sqlalchemy==2.0.46",
    "tavily-python>=0.7.19",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.14.14",
]
